# mcp-youtube-transcript

./: .gitignore  README.md  pyproject.toml
mcp_youtube_transcript/: server.py  transcript.py
