[project]
name = "mcp-youtube-transcript"
version = "0.1.0"
description = "MCP server for fetching YouTube transcripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=0.6.0",
    "mcp>=1.0.0",
]

[project.scripts]
mcp-youtube-transcript = "mcp_youtube_transcript.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
